# kerf

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  SPEC.md  Taskfile.yml  cliff.toml  deny.toml  docker-compose.test.yml
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
crates/kerf-cli/: Cargo.toml
crates/kerf-cli/src/: config.rs  diff.rs  io.rs  keys.rs  main.rs  path.rs  plumbing.rs  recipients.rs  run.rs
crates/kerf-core/: Cargo.toml
crates/kerf-core/src/: crypto.rs  engine.rs  envelope.rs  error.rs  file_format.rs  format.rs  kerf_block.rs  lib.rs  mac.rs
crates/kerf-kms/: Cargo.toml
crates/kerf-kms/src/: age.rs  aws.rs  azure.rs  error.rs  gcp.rs  lib.rs  recipient.rs
crates/kerf-kms/tests/: aws_kms_local.rs  azure_kv_local.rs  gcp_kms_local.rs
docs/: README.md  astro.config.mjs  package-lock.json  package.json
docs/src/content/docs/: index.mdx
docs/src/content/docs/concepts/: the-kerf-rule.mdx
docs/src/content/docs/contributing/: development.mdx  security.mdx
docs/src/content/docs/getting-started/: installation.mdx  introduction.mdx  quickstart.mdx
docs/src/content/docs/key-providers/: age.mdx  aws-kms.mdx  azure-key-vault.mdx  gcp-kms.mdx  overview.mdx
docs/src/content/docs/reference/: cli.mdx  exit-codes.mdx
docs/src/content/docs/reference/commands/: edit-set.mdx  encrypt-decrypt.mdx  inspect.mdx  plumbing.mdx  recipients-rotation.mdx
examples/: .gitignore  .kerf.yaml  README.md  app.kerf.json  config.kerf.yaml  reproduce.sh  service.kerf.env
examples/.keys/: demo.pub
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: envelope_parser.rs  file_parser.rs  recipient_block.rs
fuzz/seeds/envelope_parser/: valid.txt
fuzz/seeds/file_parser/: sample.json  sample.yaml
fuzz/seeds/recipient_block/: valid.yaml
kerf-logo-bundle/: README.md
