[workspace]
resolver = "2"
members = [
    "crates/kerf-core",
    "crates/kerf-kms",
    "crates/kerf-cli",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.96"
license = "Apache-2.0"
repository = "https://github.com/idestis/kerf"
homepage = "https://github.com/idestis/kerf"
authors = ["Dmytro Shamenko <dmytro.shamenko@carmoola.co.uk>"]
description = "Diff-aware, KMS-first encryption for structured secret files."
readme = "README.md"
keywords = ["secrets", "encryption", "kms", "sops", "age"]
categories = ["command-line-utilities", "cryptography"]

[workspace.dependencies]
# Internal
kerf-core = { path = "crates/kerf-core", version = "0.2.0" }
kerf-kms  = { path = "crates/kerf-kms",  version = "0.2.0" }

# Crypto — see SPEC § 5 and CLAUDE.md "Stack"
aws-lc-rs = "1.13"
age = "0.11"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
secrecy = "0.10"
subtle = "2.6"
getrandom = "0.2"

# KMS clients (only used by kerf-kms)
# default-features = false drops the SDK's `rustls` feature, which pulls the
# legacy hyper-0.14 + rustls-0.21 connector (uses `ring`, banned by CLAUDE.md,
# and carries RUSTSEC advisories in rustls-webpki 0.101). `default-https-client`
# selects the modern rustls-0.23 + aws-lc-rs connector instead — the only TLS
# backend kerf should link, consistent with the aws-lc-rs-only rule.
aws-sdk-kms = { version = "1.61", default-features = false, features = ["default-https-client", "rt-tokio"] }
# `google-cloud-kms` was renamed to `gcloud-kms` at its 1.x line; the old
# name stalled at 0.6. We track the maintained crate.
gcloud-kms = "1.5"
azure_security_keyvault_keys = "1.0"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread"] }

# Format parsing
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = { version = "1.0", features = ["preserve_order"] }
toml = { version = "0.8", features = ["preserve_order"] }
# Comment/whitespace-preserving TOML editor (SPEC § 11.1). Already in the tree
# transitively via `toml` 0.8, so this adds no new supply-chain surface.
toml_edit = "0.22"
# Span-aware YAML event parser (SPEC § 11.1). `serde_yaml` discards the byte
# positions needed to splice changed values without reserializing the document.
saphyr-parser = "0.0.6"

# Encoding + matching
base64 = "0.22"
regex = "1.11"

# CLI
clap = { version = "4.5", features = ["derive", "wrap_help"] }
anyhow = "1.0"

# Library errors
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
# Crypto correctness > performance, but a security CLI should still be quick.
lto = "thin"
codegen-units = 1
strip = "symbols"
opt-level = 3

[profile.dist]
inherits = "release"
# cargo-dist convention; safe no-op if cargo-dist isn't used.
