[package]
name = "kerf-kms"
description = "KMS recipient implementations for kerf (AWS, GCP, Azure, age)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
kerf-core = { workspace = true }
thiserror = { workspace = true }
base64    = { workspace = true }
age       = { workspace = true }
secrecy   = { workspace = true }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
