[package]
name = "kerf-kms"
description = "KMS recipient implementations for kerf (AWS, GCP, Azure, age)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
kerf-core = { workspace = true }
thiserror = { workspace = true }
base64    = { workspace = true }
age       = { workspace = true }
secrecy   = { workspace = true }
# Cloud KMS backends — pulled in only when their feature is enabled so users
# who run kerf with age-only recipients don't pay the SDK build cost.
aws-config  = { version = "1.5", optional = true, features = ["behavior-version-latest"] }
aws-sdk-kms = { workspace = true, optional = true }
aws-types   = { version = "1.3", optional = true }
tokio       = { workspace = true, optional = true }

[features]
default = ["aws-kms"]
aws-kms = ["dep:aws-config", "dep:aws-sdk-kms", "dep:aws-types", "dep:tokio"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Errors are exhaustively typed in `Error`; per-function # Errors blocks
# would restate the type. Matches the policy in kerf-core.
missing_errors_doc = "allow"
